--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.boop442.weather442">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.boop442.weather442.ui.MainActivity"
+            android:name=".ui.MainActivity"
             android:theme="@style/NoActionBarTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,21 +20,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.boop442.weather442.ui.LocationsActivity">
+        <activity android:name=".ui.LocationsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.boop442.weather442.ui.MainActivity"></meta-data>
+                android:value="com.boop442.weather442.ui.MainActivity" />
         </activity>
-        <activity android:name="com.boop442.weather442.ui.AboutActivity">
+        <activity android:name=".ui.AboutActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.boop442.weather442.ui.MainActivity"></meta-data>
+                android:value="com.boop442.weather442.ui.MainActivity" />
         </activity>
-        <activity android:name="com.boop442.weather442.ui.WeatherActivity">
+        <activity android:name=".ui.WeatherActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.boop442.weather442.ui.LocationsActivity"></meta-data>
+                android:value="com.boop442.weather442.ui.LocationsActivity" />
         </activity>
+        <activity android:name=".ui.ForecastDetailActivity"></activity>
     </application>
 
 </manifest>
