--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.boop442.weather442.ui.LocationsActivity" />
         </activity>
-        <activity android:name=".ui.ForecastDetailActivity"></activity>
+        <activity android:name=".ui.ForecastDetailActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.boop442.weather442.ui.LocationsActivity" />
+        </activity>
     </application>
 
 </manifest>
