implement drag in the drag-and-drop feature; create a new adapter class; update ViewHolder and LocationsActivity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,8 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
     compile 'com.google.firebase:firebase-database:11.8.0'
-    implementation 'com.firebaseui:firebase-ui-database:3.2.2'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.1'
     compile 'com.google.firebase:firebase-auth:11.8.0'
+    compile 'com.google.android.gms:play-services-auth:11.8.0'
 }
 apply plugin: 'com.google.gms.google-services'
